[tool.poetry]
name = "pyfindphone"
version = "0.1.0"
description = "A python package to detect known phones in close proximity"
authors = ["Robin Seidel <robin.seidel@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
phue = "^1.1"
APScheduler = "^3.9.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
